--- a/public/css/app.css
+++ b/public/css/app.css
@@ -998,6 +998,9 @@ select{
 .ml-auto{
   margin-left: auto;
 }
+.mb-1{
+  margin-bottom: 0.25rem;
+}
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1016,8 +1019,8 @@ select{
 .mb-12{
   margin-bottom: 3rem;
 }
-.mb-1{
-  margin-bottom: 0.25rem;
+.-mt-px{
+  margin-top: -1px;
 }
 .block{
   display: block;
@@ -1064,12 +1067,6 @@ select{
 .h-40{
   height: 10rem;
 }
-.h-89{
-  height: 89px;
-}
-.h-756{
-  height: 756px;
-}
 .h-11{
   height: 2.75rem;
 }
@@ -1078,6 +1075,15 @@ select{
 }
 .h-full{
   height: 100%;
+}
+.h-89{
+  height: 89px;
+}
+.h-756{
+  height: 756px;
+}
+.h-32{
+  height: 8rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1124,6 +1130,9 @@ select{
 .w-20{
   width: 5rem;
 }
+.w-7{
+  width: 1.75rem;
+}
 .w-32{
   width: 8rem;
 }
@@ -1135,9 +1144,6 @@ select{
 }
 .w-44{
   width: 11rem;
-}
-.w-7{
-  width: 1.75rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -1153,6 +1159,9 @@ select{
 }
 .max-w-xl{
   max-width: 36rem;
+}
+.max-w-6xl{
+  max-width: 72rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -1262,26 +1271,26 @@ select{
 .gap-1{
   gap: 0.25rem;
 }
-.gap-3{
-  gap: 0.75rem;
-}
-.gap-10{
-  gap: 2.5rem;
-}
 .gap-8{
   gap: 2rem;
 }
 .gap-14{
   gap: 3.5rem;
 }
+.gap-3{
+  gap: 0.75rem;
+}
+.gap-10{
+  gap: 2.5rem;
+}
 .gap-y-4{
   row-gap: 1rem;
 }
-.gap-y-8{
-  row-gap: 2rem;
-}
 .gap-y-3{
   row-gap: 0.75rem;
+}
+.gap-y-8{
+  row-gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
@@ -1395,6 +1404,10 @@ select{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1439,6 +1452,9 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-transparent{
+  background-color: transparent;
+}
 .bg-sky-600{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -1451,8 +1467,9 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-transparent{
-  background-color: transparent;
+.bg-orange-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1576,6 +1593,9 @@ select{
 .pb-20{
   padding-bottom: 5rem;
 }
+.pt-8{
+  padding-top: 2rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1637,11 +1657,11 @@ select{
 .font-bold{
   font-weight: 700;
 }
-.font-normal{
-  font-weight: 400;
-}
 .font-light{
   font-weight: 300;
+}
+.font-normal{
+  font-weight: 400;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1661,14 +1681,17 @@ select{
 .leading-4{
   line-height: 1rem;
 }
-.leading-normal{
-  line-height: 1.5;
-}
 .leading-6{
   line-height: 1.5rem;
 }
+.leading-normal{
+  line-height: 1.5;
+}
 .tracking-widest{
   letter-spacing: 0.1em;
+}
+.tracking-wider{
+  letter-spacing: 0.05em;
 }
 .text-gray-500{
   --tw-text-opacity: 1;
@@ -1726,6 +1749,14 @@ select{
   --tw-text-opacity: 1;
   color: rgb(254 215 170 / var(--tw-text-opacity));
 }
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1749,6 +1780,9 @@ select{
 }
 .opacity-50{
   opacity: 0.5;
+}
+.opacity-25{
+  opacity: 0.25;
 }
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
@@ -2308,6 +2342,9 @@ select{
   .sm\:items-center{
     align-items: center;
   }
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
   .sm\:justify-center{
     justify-content: center;
   }
@@ -2399,6 +2436,12 @@ select{
   .md\:grid{
     display: grid;
   }
+  .md\:w-4\/12{
+    width: 33.333333%;
+  }
+  .md\:w-8\/12{
+    width: 66.666667%;
+  }
   .md\:w-2\/5{
     width: 40%;
   }
@@ -2409,12 +2452,6 @@ select{
     width: 41.666667%;
   }
   .md\:w-2\/3{
-    width: 66.666667%;
-  }
-  .md\:w-4\/12{
-    width: 33.333333%;
-  }
-  .md\:w-8\/12{
     width: 66.666667%;
   }
   .md\:grid-cols-3{
