--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1073,6 +1073,9 @@ select{
 .h-7{
   height: 1.75rem;
 }
+.h-32{
+  height: 8rem;
+}
 .h-full{
   height: 100%;
 }
@@ -1081,9 +1084,6 @@ select{
 }
 .h-756{
   height: 756px;
-}
-.h-32{
-  height: 8rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1283,6 +1283,9 @@ select{
 .gap-10{
   gap: 2.5rem;
 }
+.gap-2{
+  gap: 0.5rem;
+}
 .gap-y-4{
   row-gap: 1rem;
 }
@@ -1466,10 +1469,6 @@ select{
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-orange-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
