--- a/public/css/app.css
+++ b/public/css/app.css
@@ -922,25 +922,17 @@ select{
   margin-left: auto;
   margin-right: auto;
 }
-.my-12{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-.my-16{
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .-mx-2{
   margin-left: -0.5rem;
   margin-right: -0.5rem;
 }
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -1104,6 +1096,9 @@ select{
 .min-h-screen{
   min-height: 100vh;
 }
+.min-h-\[2rem\]{
+  min-height: 2rem;
+}
 .min-h-\[8rem\]{
   min-height: 8rem;
 }
@@ -1149,6 +1144,9 @@ select{
 .w-7{
   width: 1.75rem;
 }
+.w-40{
+  width: 10rem;
+}
 .w-32{
   width: 8rem;
 }
@@ -1160,9 +1158,6 @@ select{
 }
 .w-44{
   width: 11rem;
-}
-.w-40{
-  width: 10rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -1287,6 +1282,9 @@ select{
 .gap-1{
   gap: 0.25rem;
 }
+.gap-2{
+  gap: 0.5rem;
+}
 .gap-14{
   gap: 3.5rem;
 }
@@ -1299,9 +1297,6 @@ select{
 .gap-10{
   gap: 2.5rem;
 }
-.gap-2{
-  gap: 0.5rem;
-}
 .gap-y-4{
   row-gap: 1rem;
 }
@@ -1310,9 +1305,6 @@ select{
 }
 .gap-y-8{
   row-gap: 2rem;
-}
-.gap-y-2{
-  row-gap: 0.5rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
@@ -1429,13 +1421,13 @@ select{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1495,42 +1487,6 @@ select{
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-\[\#f6cda8\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 205 168 / var(--tw-bg-opacity));
-}
-.bg-indigo-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
-.bg-\[\#d89d94\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 157 148 / var(--tw-bg-opacity));
-}
-.bg-\[\#dd6b6c\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(221 107 108 / var(--tw-bg-opacity));
-}
-.bg-\[\#875d71\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(135 93 113 / var(--tw-bg-opacity));
-}
-.bg-\[\#5b5b5b\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(91 91 91 / var(--tw-bg-opacity));
-}
-.bg-\[\#A3E635\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 230 53 / var(--tw-bg-opacity));
-}
-.bg-lime-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 230 53 / var(--tw-bg-opacity));
-}
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1620,10 +1576,6 @@ select{
 .px-12{
   padding-left: 3rem;
   padding-right: 3rem;
-}
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1877,23 +1829,9 @@ select{
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.outline{
-  outline-style: solid;
-}
-.outline-orange-100{
-  outline-color: #ffedd5;
-}
-.outline-red-400{
-  outline-color: #f87171;
-}
 .ring-1{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.ring-2{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .ring-gray-300{
@@ -1904,35 +1842,8 @@ select{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
 }
-.ring-\[\#f6cda8\]{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(246 205 168 / var(--tw-ring-opacity));
-}
-.ring-indigo-400{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(129 140 248 / var(--tw-ring-opacity));
-}
-.ring-\[\#d89d94\]{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(216 157 148 / var(--tw-ring-opacity));
-}
-.ring-\[\#dd6b6c\]{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(221 107 108 / var(--tw-ring-opacity));
-}
-.ring-\[\#875d71\]{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(135 93 113 / var(--tw-ring-opacity));
-}
-.ring-\[\#5b5b5b\]{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(91 91 91 / var(--tw-ring-opacity));
-}
 .ring-opacity-5{
   --tw-ring-opacity: 0.05;
-}
-.ring-offset-1{
-  --tw-ring-offset-width: 1px;
 }
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2212,11 +2123,6 @@ select{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.hover\:ring-2:hover{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .focus\:z-10:focus{
   z-index: 10;
 }
@@ -2243,10 +2149,6 @@ select{
 .focus\:border-sky-300:focus{
   --tw-border-opacity: 1;
   border-color: rgb(125 211 252 / var(--tw-border-opacity));
-}
-.focus\:border-indigo-500:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus{
   --tw-bg-opacity: 1;
@@ -2308,10 +2210,6 @@ select{
 .focus\:ring-sky-200:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(186 230 253 / var(--tw-ring-opacity));
-}
-.focus\:ring-indigo-500:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
   --tw-ring-opacity: 0.5;
