--- a/public/css/app.css
+++ b/public/css/app.css
@@ -916,14 +916,6 @@ select{
   margin-left: auto;
   margin-right: auto;
 }
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-.my-12{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -931,6 +923,14 @@ select{
 .-mx-2{
   margin-left: -0.5rem;
   margin-right: -0.5rem;
+}
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -1139,6 +1139,9 @@ select{
 .w-7{
   width: 1.75rem;
 }
+.w-40{
+  width: 10rem;
+}
 .w-32{
   width: 8rem;
 }
@@ -1159,9 +1162,6 @@ select{
 }
 .w-44{
   width: 11rem;
-}
-.w-40{
-  width: 10rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -1507,6 +1507,9 @@ select{
 .p-6{
   padding: 1.5rem;
 }
+.p-1{
+  padding: 0.25rem;
+}
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1571,13 +1574,13 @@ select{
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pt-6{
   padding-top: 1.5rem;
