--- a/public/css/app.css
+++ b/public/css/app.css
@@ -916,6 +916,10 @@ select{
   margin-left: auto;
   margin-right: auto;
 }
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -932,13 +936,9 @@ select{
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.mx-\[-1rem\]{
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 .my-\[-1rem\]{
   margin-top: -1rem;
@@ -947,14 +947,6 @@ select{
 .my-\[-2rem\]{
   margin-top: -2rem;
   margin-bottom: -2rem;
-}
-.my-\[-8rem\]{
-  margin-top: -8rem;
-  margin-bottom: -8rem;
-}
-.my-\[-4rem\]{
-  margin-top: -4rem;
-  margin-bottom: -4rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -1109,13 +1101,20 @@ select{
 .h-756{
   height: 756px;
 }
-.h-96{
-  height: 24rem;
+.h-\[756\]{
+  height: 756;
 }
-.h-max{
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+.h-\[756px\]{
+  height: 756px;
+}
+.h-\[701px\]{
+  height: 701px;
+}
+.h-\[612px\]{
+  height: 612px;
+}
+.h-\[667px\]{
+  height: 667px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1128,15 +1127,6 @@ select{
 }
 .min-h-\[8rem\]{
   min-height: 8rem;
-}
-.min-h-\[314px\]{
-  min-height: 314px;
-}
-.min-h-\[612px\]{
-  min-height: 612px;
-}
-.min-h-\[214px\]{
-  min-height: 214px;
 }
 .w-5{
   width: 1.25rem;
@@ -1221,12 +1211,6 @@ select{
 }
 .max-w-sm{
   max-width: 24rem;
-}
-.max-w-\[314px\]{
-  max-width: 314px;
-}
-.max-w-\[612px\]{
-  max-width: 612px;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1318,6 +1302,9 @@ select{
 .justify-around{
   justify-content: space-around;
 }
+.justify-evenly{
+  justify-content: space-evenly;
+}
 .gap-6{
   gap: 1.5rem;
 }
@@ -1341,9 +1328,6 @@ select{
 }
 .gap-10{
   gap: 2.5rem;
-}
-.gap-12{
-  gap: 3rem;
 }
 .gap-y-4{
   row-gap: 1rem;
@@ -1387,9 +1371,6 @@ select{
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.whitespace-pre-line{
-  white-space: pre-line;
 }
 .rounded-md{
   border-radius: 0.375rem;
@@ -1527,10 +1508,6 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
-.bg-sky-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(56 189 248 / var(--tw-bg-opacity));
-}
 .bg-sky-100{
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
@@ -1538,14 +1515,6 @@ select{
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-sky-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 230 253 / var(--tw-bg-opacity));
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1574,9 +1543,6 @@ select{
 }
 .p-1{
   padding: 0.25rem;
-}
-.p-12{
-  padding: 3rem;
 }
 .px-4{
   padding-left: 1rem;
@@ -1649,14 +1615,6 @@ select{
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
-}
-.py-32{
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1743,18 +1701,6 @@ select{
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-.text-7xl{
-  font-size: 4.5rem;
-  line-height: 1;
-}
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -1803,24 +1749,6 @@ select{
 }
 .leading-normal{
   line-height: 1.5;
-}
-.leading-8{
-  line-height: 2rem;
-}
-.leading-10{
-  line-height: 2.5rem;
-}
-.leading-\[4rem\]{
-  line-height: 4rem;
-}
-.leading-\[5rem\]{
-  line-height: 5rem;
-}
-.leading-\[6rem\]{
-  line-height: 6rem;
-}
-.leading-\[2rem\]{
-  line-height: 2rem;
 }
 .leading-\[3rem\]{
   line-height: 3rem;
@@ -1880,13 +1808,13 @@ select{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-orange-200{
-  --tw-text-opacity: 1;
-  color: rgb(254 215 170 / var(--tw-text-opacity));
-}
 .text-sky-700{
   --tw-text-opacity: 1;
   color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+.text-orange-200{
+  --tw-text-opacity: 1;
+  color: rgb(254 215 170 / var(--tw-text-opacity));
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -2505,10 +2433,6 @@ select{
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
-  .sm\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
 }
 @media (min-width: 768px){
   .md\:fixed{
@@ -2581,10 +2505,6 @@ select{
   .md\:pt-0{
     padding-top: 0px;
   }
-  .md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
 }
 @media (min-width: 1024px){
   .lg\:col-span-4{
@@ -2627,10 +2547,6 @@ select{
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
   .lg\:font-bold{
     font-weight: 700;
   }
@@ -2641,9 +2557,5 @@ select{
   }
   .xl\:grid-cols-6{
     grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-  .xl\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
